--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,15 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 || ^8.0",
+        "doctrine/dbal": "3.10.2",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "doctrine/dbal": "3.10.2"
+        "laravel/ui": "^3.4",
+        "tymon/jwt-auth": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
